# Chamados-Projeto

./: .gitignore  README.md  pyproject.toml
chamados/: admin.py  forms.py  models.py  serializers.py  urls.py  urls_api.py  views.py
chamados/migrations/: 0001_initial.py  0002_chamado_atualizado_em_chamado_prioridade_and_more.py  0003_chamado_arquivo.py  0004_comentario.py  0005_chamado_usuario.py
core/: settings.py  urls.py
templates/chamados/: base.html  chamado_confirm_delete.html  chamado_detail.html  chamado_form.html  chamado_list.html  login.html
